--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,46 @@
 @import "tailwindcss";
+@config "../../tailwind.config.mjs";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+::-webkit-scrollbar-track {
+  background: linear-gradient(180deg, #6c17d4, #a869f4);
+  border-radius: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #a869f4, #6c17d4);
+  border-radius: 10px;
+  transition: background 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #6c17d4, #a869f4);
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #a869f4 #6c17d4;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sora);
+  background-color: #06000d;
+  height: 100%;
+}
+
+.page-wrapper {
+  background-image: url(../../public/img/wrapper.webp);
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-attachment: scroll;
+  height: 700vh;
+}
+
+.hero-card {
+  -webkit-backdrop-filter: blur(1.95rem);
+  background-image: radial-gradient(circle, #864fcb00, #864fcb73);
 }
